--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,13 @@ dataset
 weights
 env_list.txt
 .ipynb_checkpoints/
-weights_small/
-__pycache__
+__pycaweights_small/
+che__
 *.py[cod]
 *$py.class
 *.swp
+*.log
+.idea/*
+.vscode
+*.tfrec
+siyuan
