--- a/environment.yml
+++ b/environment.yml
@@ -2,8 +2,9 @@ name: KITTI-Orientation
 channels:
   - defaults
 dependencies:
-  - python=3.7
-  - tensorflow-gpu
+  - python=3.8
+  - tensorflow-gpu=2.3
+  - tensorflow=2.3=mkl_py38h1fcfbd6_0
   - pathlib2
-  - opencv
   - tqdm
+  - scikit-image
